[gd_scene load_steps=8 format=3 uid="uid://b0aryhuic4blb"]

[ext_resource type="Script" path="res://scripts/component/options_menu.gd" id="1_x16l0"]
[ext_resource type="FontFile" uid="uid://ignnmxnvl5os" path="res://asset/font/PixelOperatorMono.ttf" id="2_i75df"]
[ext_resource type="Theme" uid="uid://cwhstwqgcmq20" path="res://asset/theme_ui.tres" id="3_ks6m5"]
[ext_resource type="Script" path="res://scripts/component/control_generic.gd" id="4_xof4r"]
[ext_resource type="AudioStream" uid="uid://bywb2k5cnpydq" path="res://asset/sfx/swing.wav" id="5_wm8hu"]

[sub_resource type="FontVariation" id="FontVariation_3w7tl"]
base_font = ExtResource("2_i75df")
spacing_glyph = -1
spacing_space = -2

[sub_resource type="LabelSettings" id="LabelSettings_dbbi2"]
line_spacing = 0.0
font = SubResource("FontVariation_3w7tl")
outline_color = Color(0.196078, 0.196078, 0.196078, 1)
shadow_size = 0
shadow_color = Color(0.197937, 0.197937, 0.197937, 1)

[node name="options_menu" type="VBoxContainer"]
visible = false
size_flags_horizontal = 0
size_flags_vertical = 8
script = ExtResource("1_x16l0")

[node name="slider" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="label" type="Label" parent="slider"]
layout_mode = 2
size_flags_horizontal = 8
text = "music 100%"
label_settings = SubResource("LabelSettings_dbbi2")

[node name="music" type="HSlider" parent="slider"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../back")
focus_neighbor_bottom = NodePath("../../slider2/sound")
focus_next = NodePath("../../slider2/sound")
focus_previous = NodePath("../../back")
theme = ExtResource("3_ks6m5")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("4_xof4r")

[node name="slider2" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="label" type="Label" parent="slider2"]
layout_mode = 2
size_flags_horizontal = 8
text = "sound 100%"
label_settings = SubResource("LabelSettings_dbbi2")

[node name="sound" type="HSlider" parent="slider2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../slider/music")
focus_neighbor_bottom = NodePath("../../back")
focus_next = NodePath("../../back")
focus_previous = NodePath("../../slider/music")
theme = ExtResource("3_ks6m5")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("4_xof4r")

[node name="back" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_neighbor_top = NodePath("../slider2/sound")
focus_neighbor_bottom = NodePath("../slider/music")
focus_next = NodePath("../slider/music")
focus_previous = NodePath("../slider2/sound")
theme = ExtResource("3_ks6m5")
keep_pressed_outside = true
text = "back"
script = ExtResource("4_xof4r")

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_wm8hu")
bus = &"Sound"

[connection signal="element_hovered" from="slider/music" to="." method="on_hover"]
[connection signal="value_changed" from="slider/music" to="." method="music_changed"]
[connection signal="drag_ended" from="slider2/sound" to="." method="sound_drag_stop"]
[connection signal="element_hovered" from="slider2/sound" to="." method="on_hover"]
[connection signal="value_changed" from="slider2/sound" to="." method="sound_changed"]
[connection signal="element_hovered" from="back" to="." method="on_hover"]
[connection signal="pressed" from="back" to="." method="back_pressed"]
